src/objects/Junction_Document_ReviewItem__c.object
<CustomObject>
    <fields>
        <fullName>Document__c</fullName>
        <label>Document</label>
        <referenceTo>Document__c</referenceTo>
        <relationshipLabel>Junctions Document ReviewItem</relationshipLabel>
        <relationshipName>Junctions_Document_ReviewItem</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Review_Item__c</fullName>
        <label>Review Item</label>
        <referenceTo>review_item__c</referenceTo>
        <relationshipLabel>Junctions Document ReviewItem</relationshipLabel>
        <relationshipName>Junctions_Document_ReviewItem</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Junction Document ReviewItem</label>
    <nameField>
        <displayFormat>Document_ReviewItem_{0000}</displayFormat>
        <label>Junction_Document_  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Junctions Document ReviewItem</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>